# whisper_demo

./: .gitignore  README.md  check_cuda.py  pyproject.toml
samples/: README.md
tests/: recode_mic.py  whisper_use_cpu_transcibe.py
